tests/baselines/reference/parserMethodSignature11(strict=true).errors.txt
parserMethodSignature11.ts(2,3): error TS7010: '2', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserMethodSignature11.ts (1 errors) ====
    interface I {
      2<T>();
      ~~~~~~~
!!! error TS7010: '2', which lacks return-type annotation, implicitly has an 'any' return type.
    }